Commit cap changes

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-image: url("./images/Grey.jpg");
+    background-image: url("./images/Grey.JPG");
     color: #FFF;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
