--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-image: url("./images/Grey.JPG");
+    background-image: url("https://dochub.com/xnessa-jade/7vA0q9lw2m8kmYPVPDNOxd/grey-jpg?dt=xLikxtTKRTCPXSzXiYdn");
     color: #FFF;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
@@ -77,7 +77,7 @@ form {
     display: block; 
     margin-left: auto;  
     margin-right: auto;  
-    border-radius: 1200px; 
+    border-radius: 100px; 
     width: 40%;
     height: auto;
     }
